--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,31 @@
 <!doctype html>
 
+
+
 <html>
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
+	<link href = "css/bootstrap.css" rel="stylesheet">
+	<link href = "css/bootstrap-theme.css" rel="stylesheet">
+	<link href = "css/hci-friends.css" rel="stylesheet">
+
+
+
 </head>
 
 <body>
+
+<div class = "container">
 	<h1>My HCI Friends</h1>
+	<div>
+		<img href ="http://lorempixel.com/500/500/people/">
+		<h3>Michael Scott</h3>
+		<p>A normal boss, but best friend</p>
+	</div>
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -22,5 +39,6 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+</div>
 </body>
 </html>
